--- a/Web/Web.config
+++ b/Web/Web.config
@@ -13,8 +13,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="EFDbConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ImageGallery.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <!--<add name="EFDbConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ImageGallery;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="EFDbConnectionString" connectionString="Data Source=SEMLOL0221313;Initial Catalog=ImageGallery;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
 
